--- a/server/package.json
+++ b/server/package.json
@@ -3,13 +3,20 @@
   "version": "1.0.0",
   "main": "serverAgent.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node serverOperacional.js",
+    "start:agent": "node serverAgent.js",
+    "start:all": "concurrently \"node serverOperacional.js\" \"node serverAgent.js\"",
+    "dev": "nodemon serverOperacional.js",
+    "dev:agent": "nodemon serverAgent.js",
+    "dev:all": "concurrently \"nodemon serverOperacional.js\" \"nodemon serverAgent.js\""
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "axios": "^1.6.2",
     "bcryptjs": "^3.0.3",
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
@@ -18,6 +25,7 @@
     "mongoose": "^9.0.1"
   },
   "devDependencies": {
+    "concurrently": "^8.2.2",
     "nodemon": "^3.1.11"
   }
 }
