--- a/server/package.json
+++ b/server/package.json
@@ -22,7 +22,8 @@
     "dotenv": "^17.2.3",
     "express": "^5.2.1",
     "jsonwebtoken": "^9.0.3",
-    "mongoose": "^9.0.1"
+    "mongoose": "^9.0.1",
+    "stripe": "^20.1.0"
   },
   "devDependencies": {
     "concurrently": "^8.2.2",
